# AoC2023

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/day1/: CMakeLists.txt  day1_1.cpp  day1_2.cpp
src/day2/: CMakeLists.txt
